[package]
name = "osvauld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sequoia-openpgp = "1.6.0"
base64 = "0.13.0"
dirs = "4.0.0"


[dependencies.nettle]
version = "7.4.0"
default-features = false
